--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+agm-map {
+  height: 300px;
+}
+
+.numero_par{
+	background-color: aliceblue;
+	color: black;
+}
+
+#cuadrado{
+	width: 200px;
+	height: 200px;
+	background-color: red;
+}
+.padding{
+	padding: 10px;
+	margin-bottom: 10px;
+}
