Hasta la primera parte de la implementacion de un TypeAhead falta la segunda

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,10 @@
         <div *ngIf="loggedIn">
           <a (click)="logout()">LogOut</a>
         </div>
+        
+        <div *ngIf="loggedUser">
+          <a >{{ loggedUser }}</a>
+        </div>
   </div>
 </nav>
 
